corrected z-index error

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -14,7 +14,6 @@ header {
   height: 13rem;
   position: relative;
   top: -18px;
-  z-index: -1;
 }
 
 h1 {
@@ -132,6 +131,7 @@ a.in-line {
 
 .hidden:focus {
   left: 0;
+  z-index: 1;
 }
 
 .sr-only {
